--- a/scss/_prize.scss
+++ b/scss/_prize.scss
@@ -157,21 +157,19 @@
                 }
             }
         }
-        .btn{
-            display: none;
-            text-align: center;
-            width: 200px;
-            position: relative;
-            left: 50%;
-            transform: translateX(-50%);
-            @include mq(0,512px){
-                display: block;
-                font-size: 14px;
-                font-weight: 700;
-                line-height: 17px;
-                left: 30%;
-                bottom: 50px;
-
+        .btn-cravas{
+            .btn{
+                display: none;
+                text-align: center;
+                width: 200px;
+                @include mq(0,512px){
+                    display: block;
+                    font-size: 14px;
+                    font-weight: 700;
+                    line-height: 17px;
+                    // left: 30%;
+                    // bottom: 50px;
+                }
             }
         }
         #login{
