--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -166,6 +166,7 @@
                 position: relative;         
                 left: 60px;
                 top: 40px;
+                cursor: pointer;
                 @include mq(0,512px){
                     padding: 15px 50px;
                     border-radius: 15px;
