--- a/scss/_prize.scss
+++ b/scss/_prize.scss
@@ -58,7 +58,11 @@
                     position: absolute;
                     transition: all 0.2s;
                     &:hover{
+                        cursor: pointer;
                         width: 185px;
+                        @include mq(0,512px){
+                            width: 150px;
+                        }
                     }
                     @include mq(0,512px){
                         width: 140px;
@@ -105,6 +109,7 @@
                     transition: all 0.2s;
                     &:hover{
                         opacity: 0.8;
+                        cursor: pointer;
                     }
                     @include mq(0,512px){
                         display: none;
