Update arrow click Sof

--- a/scss/_announc.scss
+++ b/scss/_announc.scss
@@ -51,6 +51,7 @@
         }
         .arrow{
             i{
+                cursor: pointer;
                 color: $white;
                 font-size: 30px;
                 transition: all 0.2s;
